Added new functionality to provide clients to be able to schedule pods in different Kubernetes nodes. This would be useful in situations wherein one would like to schedule high load pods not getting scheduled in the same Kubernetes node.
